--- a/src/index.css
+++ b/src/index.css
@@ -121,6 +121,7 @@ button {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  justify-content: space-between;
 }
 
 .img_data i {
